--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@
 *.iws
 *.iml
 *.ipr
+/out/
 
 ### NetBeans ###
 /nbproject/private/
@@ -24,9 +25,3 @@
 /dist/
 /nbdist/
 /.nb-gradle/
-
-gradlew
-gradlew.bat
-gradle/
-build/
-out/
